Finished the frontend of login and register

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,5 +1,5 @@
 // Body
-$body-bg: #f8fafc;
+$body-bg: #050547;
 
 // Typography
 $font-family-sans-serif: 'Nunito', sans-serif;
@@ -7,13 +7,7 @@ $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
 // Colors
-$blue: #3490dc;
-$indigo: #6574cd;
-$purple: #9561e2;
-$pink: #f66d9b;
-$red: #e3342f;
-$orange: #f6993f;
-$yellow: #ffed4a;
-$green: #38c172;
-$teal: #4dc0b5;
-$cyan: #6cb2eb;
+$color-primary: #3AD7F0;
+$color-secondary: #4951CF;
+$gradient-primary: linear-gradient(to top right, #4951CF, #3AD7F0);
+$text-color: #fff;
