--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,6 +3,8 @@
 
 // Variables
 @import 'variables';
+@import 'gava/buttons';
+@import 'gava/backgrounds';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
