Added a title to the login and register page

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -15,6 +15,10 @@ body {
   background-color: #050547;
 }
 
+.font-size-30 {
+  font-size: 30px;
+}
+
 /*!
  * Bootstrap v4.4.1 (https://getbootstrap.com/)
  * Copyright 2011-2019 The Bootstrap Authors
