--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,6 +5,7 @@
 @import 'variables';
 @import 'gava/buttons';
 @import 'gava/backgrounds';
+@import 'gava/font-sizes';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
