--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -10,4 +10,5 @@ $line-height-base: 1.6;
 $color-primary: #3AD7F0;
 $color-secondary: #4951CF;
 $gradient-primary: linear-gradient(to top right, #4951CF, #3AD7F0);
+$gradient-secondary: linear-gradient(to top right, #6E27D4, #D01CE2);
 $text-color: #fff;
