--- a/resources/sass/gava/_buttons.scss
+++ b/resources/sass/gava/_buttons.scss
@@ -1,12 +1,17 @@
 .btn {
+    color: white;
+    border: 0px !important;
+    text-transform: uppercase;
+    font-weight: bold;
+    border-radius: 0;
+    padding: 8px 15px;
+    letter-spacing: 1px;
+
     &.btn-primary {
-        color: white;
-        border: 0px;
         background-image: $gradient-primary;
-        text-transform: uppercase;
-        font-weight: bold;
-        border-radius: 0;
-        padding: 8px 15px;
-        letter-spacing: 1px;
+    }
+
+    &.btn-secondary {
+        background-image: $gradient-secondary;
     }
 }
