--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -2,13 +2,14 @@
 $body-bg: #050547;
 
 // Typography
-$font-family-sans-serif: 'Nunito', sans-serif;
+$font-family-sans-serif: 'Open Sans', sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
 // Colors
 $color-primary: #3AD7F0;
 $color-secondary: #4951CF;
+$color-thirthiary: #D01CE2;
 $gradient-primary: linear-gradient(to top right, #4951CF, #3AD7F0);
 $gradient-secondary: linear-gradient(to top right, #6E27D4, #D01CE2);
 $text-color: #fff;
