--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -5,7 +5,10 @@
 @import 'variables';
 @import 'gava/buttons';
 @import 'gava/backgrounds';
-@import 'gava/font-sizes';
+@import 'gava/titles';
+@import 'gava/images';
+@import 'gava/links';
+@import 'gava/texts';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
