--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3,8 +3,6 @@
 .btn {
   color: white;
   border: 0px !important;
-  text-transform: uppercase;
-  font-weight: bold;
   border-radius: 0;
   padding: 8px 15px;
   letter-spacing: 1px;
@@ -24,14 +22,48 @@
 
 .gava .what-to-learn-wrapper {
   background-image: linear-gradient(to top right, #6E27D4, #D01CE2);
+  -webkit-clip-path: polygon(0 5%, 100% 0%, 100% 95%, 0 100%);
+          clip-path: polygon(0 5%, 100% 0%, 100% 95%, 0 100%);
 }
 
 .gava .footer-wrapper {
   background-image: linear-gradient(to top right, #4951CF, #3AD7F0);
 }
 
-.font-size-30 {
+.card-header {
   font-size: 30px;
+}
+
+.gava .icon {
+  width: 70px;
+}
+
+.gava .video-image {
+  height: 150px;
+  background-image: url(/images/video-image.jpg);
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
+
+.link {
+  padding: 10px 15px;
+}
+
+.link.link-primary {
+  border: 1px solid #4951cf;
+}
+
+.link.link-secondary {
+  background: linear-gradient(to top right, #4951CF, #3AD7F0);
+}
+
+::-moz-selection {
+  background: #D01CE2;
+}
+
+::selection {
+  background: #D01CE2;
 }
 
 /*!
@@ -68,7 +100,7 @@
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
-  --font-family-sans-serif: "Nunito", sans-serif;
+  --font-family-sans-serif: "Open Sans", sans-serif;
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
@@ -100,7 +132,7 @@ section {
 
 body {
   margin: 0;
-  font-family: "Nunito", sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 0.9rem;
   font-weight: 400;
   line-height: 1.6;
@@ -6412,7 +6444,7 @@ a.close.disabled {
   z-index: 1070;
   display: block;
   margin: 0;
-  font-family: "Nunito", sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.6;
@@ -6537,7 +6569,7 @@ a.close.disabled {
   z-index: 1060;
   display: block;
   max-width: 276px;
-  font-family: "Nunito", sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.6;
