--- a/resources/sass/gava/_backgrounds.scss
+++ b/resources/sass/gava/_backgrounds.scss
@@ -1,6 +1,6 @@
-.gava {
+/*.gava {
     background-color: $body-bg;
-}
+}*/
 
 .gava .what-to-learn-wrapper {
     background-image: $gradient-secondary;
