--- a/public/css/app.css
+++ b/public/css/app.css
@@ -16,9 +16,9 @@
   background-image: linear-gradient(to top right, #6E27D4, #D01CE2);
 }
 
-/*.gava {
-    background-color: $body-bg;
-}*/
+.gava {
+  background-color: white;
+}
 
 .gava .what-to-learn-wrapper {
   background-image: linear-gradient(to top right, #6E27D4, #D01CE2);
@@ -28,6 +28,15 @@
 
 .gava .footer-wrapper {
   background-image: linear-gradient(to top right, #4951CF, #3AD7F0);
+}
+
+.gava .menu {
+  background-color: #050547;
+}
+
+.profile-bg {
+  background-color: #291875;
+  height: 220px;
 }
 
 .card-header {
@@ -138,7 +147,7 @@ body {
   line-height: 1.6;
   color: #212529;
   text-align: left;
-  background-color: #050547;
+  background-color: #fff;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
@@ -578,7 +587,7 @@ mark,
 
 .img-thumbnail {
   padding: 0.25rem;
-  background-color: #050547;
+  background-color: #fff;
   border: 1px solid #dee2e6;
   border-radius: 0.25rem;
   max-width: 100%;
@@ -4331,15 +4340,15 @@ input[type=button].btn-block {
 }
 
 .custom-range:focus::-webkit-slider-thumb {
-  box-shadow: 0 0 0 1px #050547, 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
 }
 
 .custom-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #050547, 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
 }
 
 .custom-range:focus::-ms-thumb {
-  box-shadow: 0 0 0 1px #050547, 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
 }
 
 .custom-range::-moz-focus-outer {
@@ -4545,8 +4554,8 @@ input[type=button].btn-block {
 .nav-tabs .nav-link.active,
 .nav-tabs .nav-item.show .nav-link {
   color: #495057;
-  background-color: #050547;
-  border-color: #dee2e6 #dee2e6 #050547;
+  background-color: #fff;
+  border-color: #dee2e6 #dee2e6 #fff;
 }
 
 .nav-tabs .dropdown-menu {
