--- a/resources/sass/gava/_buttons.scss
+++ b/resources/sass/gava/_buttons.scss
@@ -6,7 +6,19 @@
     letter-spacing: 1px;
 
     &.btn-primary {
-        background-image: $gradient-primary;
+        background-color: #050547;
+        border: #050547;
+    }
+
+    &.active {
+        background-color: #050547 !important;
+        border: 2px solid #050547 !important;
+    }
+
+    &.non-active {
+        background-color: transparent;
+        border: 1px solid #050547 !important;
+        color: #050547 !important;
     }
 
     &.btn-secondary {
