--- a/public/css/app.css
+++ b/public/css/app.css
@@ -60,7 +60,7 @@
 }
 
 .gava .video-image {
-  height: 150px;
+  height: 100px;
   background-image: url(/images/video-image.jpg);
   background-size: cover;
   background-position: center center;
@@ -77,6 +77,10 @@
 
 .link.link-secondary {
   background: linear-gradient(to top right, #4951CF, #3AD7F0);
+}
+
+* {
+  color: #291875;
 }
 
 ::-moz-selection {
