--- a/resources/sass/gava/_links.scss
+++ b/resources/sass/gava/_links.scss
@@ -9,3 +9,11 @@
         background: $gradient-primary;
     }
 }
+
+.auth-link {
+    color: $btn-color;
+
+    &:hover {
+        color: $btn-color;
+    }
+}
