--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -12,4 +12,6 @@ $color-secondary: #4951CF;
 $color-thirthiary: #D01CE2;
 $gradient-primary: linear-gradient(to top right, #4951CF, #3AD7F0);
 $gradient-secondary: linear-gradient(to top right, #6E27D4, #D01CE2);
-$text-color: #fff;
+$text-color: #000;
+$btn-color: #291875;
+$btn-hover-color: #1f1259;
