--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,6 +9,7 @@
 @import 'gava/images';
 @import 'gava/links';
 @import 'gava/texts';
+@import 'gava/viewports';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
