--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -13,5 +13,6 @@ $color-thirthiary: #D01CE2;
 $gradient-primary: linear-gradient(to top right, #4951CF, #3AD7F0);
 $gradient-secondary: linear-gradient(to top right, #6E27D4, #D01CE2);
 $text-color: #000;
-$btn-color: #291875;
-$btn-hover-color: #1f1259;
+$btn-primary-color: #291875;
+$btn-primary-hover-color: #1f1259;
+$btn-secondary-hover-color: #1ad1ee;
