--- a/resources/sass/gava/_links.scss
+++ b/resources/sass/gava/_links.scss
@@ -11,9 +11,9 @@
 }
 
 .auth-link {
-    color: $btn-color;
+    color: $btn-primary-color;
 
     &:hover {
-        color: $btn-color;
+        color: $btn-primary-color;
     }
 }
