--- a/resources/sass/gava/_buttons.scss
+++ b/resources/sass/gava/_buttons.scss
@@ -18,6 +18,7 @@
         }
 
         &:hover {
+            color: white !important;
             background-color: $btn-primary-hover-color;
         }
     }
