--- a/resources/sass/gava/_texts.scss
+++ b/resources/sass/gava/_texts.scss
@@ -10,6 +10,10 @@
     color: $color-primary;
 }
 
-.pageNotFoundTitle {
-    font-size: 100px;
+.page-not-found-title {
+    font-size: 200px;
+}
+
+.page-not-found-description {
+    font-size: 25px;
 }
