--- a/resources/sass/gava/_backgrounds.scss
+++ b/resources/sass/gava/_backgrounds.scss
@@ -2,20 +2,46 @@
     background-color: white;
 }
 
-.gava .what-to-learn-wrapper {
-    background-image: $gradient-secondary;
-    clip-path: polygon(0 5%, 100% 0%, 100% 95%, 0 100%);
+.gava .bg-landing {
+    background-color: #050547;
 }
 
-.gava .footer-wrapper {
-    background-image: $gradient-primary;
-}
-
-.gava .menu {
+.gava .menu, .gava .mobile-menu {
     background-color: $menu-bg;
+}
+
+.gava .descriptionBackground {
+    margin: auto;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 4;
+    background-color: black;
+    opacity: 0.5;
+}
+
+.gava .description {
+    z-index: 5;
+    margin: auto;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: #050547;
+    color: white;
+    border-radius: 10px;
+    padding: 40px;
 }
 
 .profile-bg {
     background-color: #291875;
     height: 220px;
+}
+
+@media (min-width: 768px) {
+    .description {
+        height: 470px;
+        width: 400px;   
+    }
 }
