--- a/resources/sass/gava/_texts.scss
+++ b/resources/sass/gava/_texts.scss
@@ -17,3 +17,15 @@
 .page-not-found-description {
     font-size: 25px;
 }
+
+.course-username {
+    font-size: 12px;
+}
+
+.course-video-amount {
+    font-size: 12px;
+}
+
+.subject {
+    cursor: pointer;
+}
