--- a/resources/sass/gava/_links.scss
+++ b/resources/sass/gava/_links.scss
@@ -2,7 +2,7 @@
     padding: 10px 15px;
 
     &.link-primary {
-        border: 1px solid #4951cf;
+        border: 1px solid #fff;
     }
 
     &.link-secondary {
