--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -10,6 +10,7 @@
 @import 'gava/links';
 @import 'gava/texts';
 @import 'gava/viewports';
+@import 'gava/inputs';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
