--- a/resources/sass/gava/_backgrounds.scss
+++ b/resources/sass/gava/_backgrounds.scss
@@ -3,7 +3,7 @@
 }
 
 .gava .bg-landing {
-    background-color: #050547;
+    background-color: #050547 !important;
 }
 
 .gava .menu, .gava .mobile-menu {
@@ -41,7 +41,7 @@
 
 @media (min-width: 768px) {
     .description {
-        height: 470px;
-        width: 400px;   
+        height: 520px;
+        width: 460px;   
     }
 }
