--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -11,6 +11,7 @@
 @import 'gava/texts';
 @import 'gava/viewports';
 @import 'gava/inputs';
+@import 'gava/modals';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
