--- a/resources/sass/gava/_images.scss
+++ b/resources/sass/gava/_images.scss
@@ -13,3 +13,11 @@
 .gava .description img {
     max-width: 70px;
 }
+
+.subscriber-image {
+    width: 60px;
+    height: 60px;
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
