--- a/public/css/app.css
+++ b/public/css/app.css
@@ -153,6 +153,34 @@
   background-repeat: no-repeat;
 }
 
+.profile-image {
+  width: 100px;
+  height: 100px;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.popup-subscriber-picture {
+  width: 50px;
+  height: 50px;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.popup-course-picture {
+  width: 100px;
+  height: 50px;
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.logo-gava {
+  width: 100px;
+}
+
 .link {
   padding: 10px 15px;
 }
