--- a/resources/sass/gava/_images.scss
+++ b/resources/sass/gava/_images.scss
@@ -21,3 +21,31 @@
     background-size: cover;
     background-repeat: no-repeat;
 }
+
+.profile-image {
+    width: 100px;
+    height: 100px;
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.popup-subscriber-picture {
+    width: 50px;
+    height: 50px;
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.popup-course-picture {
+    width: 100px;
+    height: 50px;
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.logo-gava {
+    width: 100px;
+}
