--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,6 +12,7 @@
 @import 'gava/viewports';
 @import 'gava/inputs';
 @import 'gava/modals';
+@import 'gava/container';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
