--- a/public/css/app.css
+++ b/public/css/app.css
@@ -266,6 +266,15 @@ span {
   box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.16);
 }
 
+@media (min-width: 768px) {
+  .subcribe-confirmation {
+    position: absolute;
+    top: 74.5px;
+    bottom: 0px;
+    width: 100%;
+  }
+}
+
 /*!
  * Bootstrap v4.4.1 (https://getbootstrap.com/)
  * Copyright 2011-2019 The Bootstrap Authors
