--- a/public/css/app.css
+++ b/public/css/app.css
@@ -267,12 +267,12 @@ span {
 }
 
 @media (min-width: 768px) {
-  .subcribe-confirmation {
-    position: absolute;
-    top: 74.5px;
-    bottom: 0px;
-    width: 100%;
-  }
+  /*.subcribe-confirmation {
+      position: absolute;
+      top: 74.5px;   
+      bottom: 0px;
+      width: 100%;
+  }*/
 }
 
 /*!
