--- a/resources/sass/gava/_container.scss
+++ b/resources/sass/gava/_container.scss
@@ -1,8 +1,8 @@
 @media(min-width: 768px) {
-    .subcribe-confirmation {
+    /*.subcribe-confirmation {
         position: absolute;
         top: 74.5px;   
         bottom: 0px;
         width: 100%;
-    }
+    }*/
 }
