--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,6 +13,7 @@
 @import 'gava/inputs';
 @import 'gava/modals';
 @import 'gava/container';
+@import 'gava/checkboxes';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
