--- a/resources/sass/gava/_buttons.scss
+++ b/resources/sass/gava/_buttons.scss
@@ -74,5 +74,12 @@
 }
 
 .add-btn {
-    border: 1px dotted black;
+    background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' rx='5' ry='5' stroke='%23291875' stroke-width='2' stroke-dasharray='6%2c 14' stroke-dashoffset='4' stroke-linecap='square'/%3e%3c/svg%3e");
+    border-radius: 5px;
+    height: 130px;
+    cursor: pointer;
+
+    p {
+        font-size: 40px;
+    }
 }
