--- a/resources/sass/gava/_inputs.scss
+++ b/resources/sass/gava/_inputs.scss
@@ -1,3 +1,28 @@
 #mc_embed_signup .mc-field-group {
     min-height: 0px !important;
 }
+
+#tumbnail, #video, #profile_picture {
+    opacity: 0;
+    position: absolute;
+    z-index: -1;
+}
+
+.rating .star i {
+    color: #DADADA;
+}
+
+/*#profile_picture_label {
+    position: relative;
+}
+
+#profile_picture_label img::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
+}*/
