--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,6 +14,7 @@
 @import 'gava/modals';
 @import 'gava/container';
 @import 'gava/checkboxes';
+@import 'gava/icons';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
