--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -15,6 +15,7 @@
 @import 'gava/container';
 @import 'gava/checkboxes';
 @import 'gava/icons';
+@import 'gava/videos';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
