--- a/resources/sass/gava/_texts.scss
+++ b/resources/sass/gava/_texts.scss
@@ -38,3 +38,11 @@
 .subject {
     cursor: pointer;
 }
+
+.tag {
+    border: 1px solid $btn-primary-color;
+}
+
+.tag:nth-child(1) {
+    margin-left: 0px !important;
+}
