--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -16,6 +16,7 @@
 @import 'gava/checkboxes';
 @import 'gava/icons';
 @import 'gava/videos';
+@import 'gava/multiselects';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
