--- a/resources/sass/gava/_images.scss
+++ b/resources/sass/gava/_images.scss
@@ -49,3 +49,28 @@
 .logo-gava {
     width: 100px;
 }
+
+.tumbnail {
+    height: 85px;
+    background-position: center center;
+    background-size: cover;
+    border-radius: 5px;
+
+    &.exclusive-tumbnail {
+        position: relative;
+        z-index: 0;
+    
+        &::after {
+            background-color: #000;
+            position: absolute;
+            content:"";
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            opacity: 0.5;
+            border-radius: 5px;
+        }
+    }
+}
+
