--- a/resources/sass/gava/_images.scss
+++ b/resources/sass/gava/_images.scss
@@ -30,6 +30,33 @@
     background-repeat: no-repeat;
 }
 
+.edit-profile-image {
+    width: 72.5px;
+    height: 72.5px;
+    background-position: center center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+
+    & i {
+        z-index: 99;
+        font-size: 25px;
+        opacity: 0.7;
+    }
+
+    &::before {
+        background-color: #000;
+        position: absolute;
+        content:"";
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        opacity: 0.2;
+        border-radius: 50%;
+    }
+}
+
 .popup-subscriber-picture {
     width: 50px;
     height: 50px;
@@ -51,10 +78,11 @@
 }
 
 .tumbnail {
-    height: 85px;
+    height: 95px;
+    max-width: 160px;
     background-position: center center;
     background-size: cover;
-    border-radius: 5px;
+    border-radius: 0.25rem;
 
     &.exclusive-tumbnail {
         position: relative;
@@ -70,6 +98,29 @@
             height: 100%;
             opacity: 0.5;
             border-radius: 5px;
+        }
+    }
+
+    &.edit-tumbnail {
+        position: relative;
+        z-index: 0;
+    
+        &::after {
+            background-color: #000;
+            position: absolute;
+            content:"";
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            opacity: 0.2;
+            border-radius: 5px;
+        }
+
+        & i {
+            z-index: 99;
+            font-size: 40px;
+            opacity: 0.7;
         }
     }
 }
