--- a/resources/sass/gava/_container.scss
+++ b/resources/sass/gava/_container.scss
@@ -6,3 +6,12 @@
         width: 100%;
     }*/
 }
+
+.subcribe-confirmation {
+    position: absolute;
+    top: 74.5px;   
+    left: 0;
+    right: 0;
+    bottom: 0px;
+    width: 100%;
+}
