--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -16,3 +16,4 @@ $text-color: #000;
 $btn-primary-color: #291875;
 $btn-primary-hover-color: #1f1259;
 $btn-secondary-hover-color: #1ad1ee;
+$checked-star-color: #4951CF;
