--- a/resources/sass/gava/_backgrounds.scss
+++ b/resources/sass/gava/_backgrounds.scss
@@ -36,12 +36,16 @@
 
 .profile-bg {
     background-color: #291875;
-    height: 220px;
+    height: 150px;
 }
 
 @media (min-width: 768px) {
     .description {
         height: 520px;
         width: 460px;   
+    }
+
+    .profile-bg {
+        height: 220px;
     }
 }
