--- a/public/css/app.css
+++ b/public/css/app.css
@@ -168,6 +168,35 @@
   height: 150px;
 }
 
+.video-preview {
+  position: relative;
+  height: 250px;
+  width: 100%;
+  overflow: hidden;
+  border-radius: 5px;
+}
+
+.video-preview video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  min-height: 100%;
+  min-width: 100%;
+  width: auto;
+  height: auto;
+  transform: translateX(-50%) translateY(-50%);
+  background: url(/videos/hero-home.jpg);
+  background-size: cover;
+  transition: opacity 1s;
+}
+
+.video-preview .layer {
+  background: rgba(0, 0, 0, 0.2);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
 @media (min-width: 768px) {
   .description {
     height: 520px;
@@ -310,6 +339,11 @@ h2 {
 
 .tumbnail.edit-tumbnail i {
   z-index: 99;
+  font-size: 40px;
+  opacity: 0.7;
+}
+
+.video-preview i {
   font-size: 40px;
   opacity: 0.7;
 }
