--- a/resources/sass/gava/_backgrounds.scss
+++ b/resources/sass/gava/_backgrounds.scss
@@ -39,6 +39,37 @@
     height: 150px;
 }
 
+.video-preview {
+    position: relative;
+    height: 250px;
+    width: 100%;
+    overflow: hidden;
+    border-radius: 5px;
+}
+
+.video-preview video {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    min-height: 100%;
+    min-width: 100%;
+    width: auto;
+    height: auto;
+    -webkit-transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-50%);
+    background: url(/videos/hero-home.jpg);
+    background-size: cover;
+    -webkit-transition: opacity 1s;
+    transition: opacity 1s;
+}
+
+.video-preview .layer {
+    background: rgba(0,0,0,.2);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
 @media (min-width: 768px) {
     .description {
         height: 520px;
