--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -17,6 +17,7 @@
 @import 'gava/icons';
 @import 'gava/multiselects';
 @import 'gava/scrollbar';
+@import 'gava/forms';
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
