--- a/resources/sass/gava/_modals.scss
+++ b/resources/sass/gava/_modals.scss
@@ -3,3 +3,7 @@
     -moz-box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.16);
     box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.16);
 }
+
+.modal .extra {
+    font-size: 10px;
+}
