--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,10 @@
 @import url(https://fonts.googleapis.com/css?family=Nunito);@charset "UTF-8";
 
+.header .position-fixed {
+  z-index: 10;
+  bottom: 110px;
+}
+
 .btn {
   color: white;
   border: 0px !important;
@@ -123,6 +128,11 @@
   .add-course-col {
     position: static;
     top: 0px;
+  }
+
+  .header .position-fixed {
+    position: static !important;
+    bottom: 0px;
   }
 }
 
@@ -283,7 +293,8 @@ h2 {
   background-repeat: no-repeat;
 }
 
-.popup-course-picture {
+.popup-course-picture,
+.popup-video-picture {
   width: 100px;
   height: 50px;
   background-position: center center;
@@ -485,13 +496,14 @@ span {
   font-size: 10px;
 }
 
+.rating-overview {
+  border-bottom: 1px solid #dee2e6;
+}
+
 @media (min-width: 768px) {
-  /*.subcribe-confirmation {
-      position: absolute;
-      top: 74.5px;   
-      bottom: 0px;
-      width: 100%;
-  }*/
+  .rating-overview {
+    border-bottom: 0px !important;
+  }
 }
 
 .subcribe-confirmation {
