--- a/resources/sass/gava/_container.scss
+++ b/resources/sass/gava/_container.scss
@@ -1,10 +1,11 @@
+.rating-overview {
+    border-bottom: 1px solid #dee2e6;
+}
+
 @media(min-width: 768px) {
-    /*.subcribe-confirmation {
-        position: absolute;
-        top: 74.5px;   
-        bottom: 0px;
-        width: 100%;
-    }*/
+    .rating-overview {
+        border-bottom: 0px !important;
+    }
 }
 
 .subcribe-confirmation {
