--- a/resources/sass/gava/_images.scss
+++ b/resources/sass/gava/_images.scss
@@ -65,7 +65,7 @@
     background-repeat: no-repeat;
 }
 
-.popup-course-picture {
+.popup-course-picture, .popup-video-picture {
     width: 100px;
     height: 50px;
     background-position: center center;
